# citation-verify-agent

./: .gitignore  CITATION_VERIFIER_PROMPT.md  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: run-eval.md  test-resolver.md  verify-paper.md
.context/: decisions.md  known-issues.md
.context/test-papers/: eval_paper.bib  eval_paper.tex  paper1.bib  paper1.tex  paper2.bib  paper2.tex
data/eval/: ground_truth.jsonl
scripts/: run_kpi_test.py
src/citverif/: cli.py  schema.py
src/citverif/agent/: prompts.py  reflexion.py  tools.py  verifier.py
src/citverif/eval/: dataset.py  metrics.py  runner.py
src/citverif/extract/: claims.py
src/citverif/memory/: chunker.py  paper_cache.py  vector_store.py
src/citverif/parse/: bib.py  tex.py
src/citverif/report/: markdown.py
src/citverif/resolve/: arxiv.py  chain.py  openalex.py  semantic_scholar.py  unpaywall.py
tests/integration/: test_claims_integration.py  test_reflexion_integration.py  test_resolution.py  test_vector_store.py  test_verifier_integration.py
tests/unit/: test_bib_parser.py  test_chunker.py  test_claims.py  test_dataset.py  test_metrics.py  test_reflexion.py  test_report.py  test_tex_parser.py  test_verifier.py
