[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citverif"
version = "0.1.0"
description = "Citation verification agent for LaTeX papers"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=0.0.14",
    "pydantic>=2.7",
    "chromadb>=0.5",
    "pylatexenc>=2.10",
    "bibtexparser>=2.0.0b7",
    "pymupdf>=1.24",
    "arxiv>=2.1",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "openai>=1.30",      # pydantic-ai uses openai client for Ollama compat endpoint
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
verify-citations = "citverif.cli:app"
citverif-eval = "citverif.eval.runner:app"
citverif-kpi = "scripts.run_kpi_test:main"

[tool.hatch.build.targets.wheel]
packages = ["src/citverif"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
